# www.thamognya.com

./: .eslintrc.js  .eslintrc.json  .gitattributes  .prettierrc  Cargo.toml  Dockerfile  README.md  astro.config.mjs  index.html  next.config.js  nuxt.config.js  package-lock.json  package.json  prev.ts  run.sh  start.sh  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: head.tsx  layout.tsx  page.tsx
componenets/: README.md
components/: aboutMe.tsx  accounts.tsx  bio.tsx  chakra.tsx  fonts.tsx  footer.tsx  grid-item.tsx  homePage.vue  indexPage.vue  logo.tsx  masthead.tsx  navbar.jsx  navbar.tsx  navbar.vue  section.jsx  skills.tsx  socialMedia.tsx  splashLoader.tsx  theme-toggle-button.tsx  themeSwitch.tsx  videoBg.tsx  voxel-dog-loader.jsx  voxel-dog.jsx  work.tsx
components/assets/: logo.tsx
components/layouts/: main.jsx  main.tsx
lib/: model.jsx  theme.jsx  theme.tsx
licenses/: LICENSE.GPL-3.0-or-later.md
pages/: 404.tsx  _app.jsx  _app.tsx  contact.tsx  index.jsx  index.tsx  index.vue
pages/api/: hello.ts
public/: .gitignore  cv.sh  update_cv.sh
src/: main.rs  router.rs
src/components/: README.md  footer.rs  navbar.rs
src/css/: README.md
src/layouts/: MainLayout.astro  README.md
src/pages/: 404.astro  404.rs  README.md  awards.rs  contact.rs  error.rs  experiences.rs  index.astro  index.rs  (+4 more)
styles/: globals.css  globals.sass
theme/: main.ts
utils/: scrollObserver.tsx
www.thamognya.com/: jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts
(+24 files in other folders)
