[package]
author = "Thamognya Kodi <contact@thamognya.com>"
name = "www-thamognya-com"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://www.thamognya.com"
repository = "https://github.com/Thamognya/www.thamognya.com"
readme = "README.md"
description = """
This is the source code of thamognya's website
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = ">=0.19"
yew-router = ">=0.16.0"
