[package]
name = "www-thamognya-com"
author = ["Thamognya Kodi <contact@thamognya.com>"]
license = "AGPL-3.0-or-later"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = ">=0.19"
yew-router = ">=0.16"
chrono = ">=0.4.19"